src/test/ui/borrowck/borrowck-mutate-in-guard.stderr
error[E0510]: cannot mutably borrow {$place_desc} in 
  --> $DIR/borrowck-mutate-in-guard.rs:10:25
   |
LL |     match x {
   |           - value is immutable in 
LL |         Enum::A(_) if { x = Enum::B(false); false } => 1,
   |                         ^^^^^^^^^^^^^^^^^^ cannot mutably borrow

error[E0510]: cannot mutably borrow {$place_desc} in 
  --> $DIR/borrowck-mutate-in-guard.rs:12:33
   |
LL |     match x {
   |           - value is immutable in 
...
LL |         Enum::A(_) if { let y = &mut x; *y = Enum::B(false); false } => 1,
   |                                 ^^^^^^ cannot mutably borrow

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0510`.
